Fix cramped gutters

--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -2,8 +2,14 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  max-width: 50vw;
+  max-width: 95vw;
   text-align: center;
+}
+
+@media (min-width: 992px) {
+  .Home {
+    max-width: 50vw;
+  }
 }
 
 .Home-logoWrapper {
